--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -110,6 +110,8 @@ bSkipMovies=False
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/Maps/Lobby")
 +MapsToCook=(FilePath="/Game/Maps/StartLevel")
++MapsToCook=(FilePath="/Game/Maps/TransitionMap")
++MapsToCook=(FilePath="/Game/Maps/BlasterMap")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
