Sun added for menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,13 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.DefaultFeature.AutoExposure=False
+r.AllowOcclusionQueries=True
+r.TextureStreaming=True
+r.DefaultFeature.MotionBlur=False
+r.AntiAliasingMethod=4
+r.ForwardShading=False
+r.Nanite.ProjectEnabled=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
