--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,7 +33,9 @@ r.TextureStreaming=True
 r.DefaultFeature.MotionBlur=False
 r.AntiAliasingMethod=4
 r.ForwardShading=False
-r.Nanite.ProjectEnabled=False
+r.Nanite.ProjectEnabled=True
+r.MegaLights.EnableForProject=True
+r.RayTracing.Shadows=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
