--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
 
-r.GenerateMeshDistanceFields=False
+r.GenerateMeshDistanceFields=True
 
 r.DynamicGlobalIlluminationMethod=1
 
@@ -16,9 +16,9 @@ r.ReflectionMethod=1
 
 r.SkinCache.CompileShaders=True
 
-r.RayTracing=False
+r.RayTracing=True
 
-r.RayTracing.RayTracingProxies.ProjectEnabled=False
+r.RayTracing.RayTracingProxies.ProjectEnabled=True
 
 r.Shadow.Virtual.Enable=1
 
@@ -28,24 +28,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.AutoExposure=False
-r.AllowOcclusionQueries=True
-r.TextureStreaming=False
 r.DefaultFeature.MotionBlur=False
-r.AntiAliasingMethod=3
-r.ForwardShading=True
-r.Nanite.ProjectEnabled=False
-r.MegaLights.EnableForProject=True
-r.RayTracing.Shadows=False
-r.MSAACount=8
-r.DefaultFeature.LightUnits=1
-r.CustomDepthTemporalAAJitter=True
-r.MeshPaintVirtualTexture.Support=False
-r.DefaultFeature.Bloom=False
-r.DefaultFeature.AmbientOcclusion=False
-r.DefaultFeature.AmbientOcclusionStaticFraction=False
-r.Lumen.HardwareRayTracing=False
-r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
-r.VirtualTextures=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
