added loading screen plugin from lyra! Loading screen works!

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -116,3 +116,7 @@ bSkipMovies=False
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
+[/Script/CommonLoadingScreen.CommonLoadingScreenSettings]
+LoadingScreenWidget=/Game/Blueprints/Widgets/LoadingScreen.LoadingScreen_C
+CommonLoadingScreen.HoldLoadingScreenAdditionalSecs=5.000000
+
