tried to make loading screen use movies, was worse than the plugin.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -118,5 +118,9 @@ CustomStageCopyHandler=
 
 [/Script/CommonLoadingScreen.CommonLoadingScreenSettings]
 LoadingScreenWidget=/Game/Blueprints/Widgets/LoadingScreen.LoadingScreen_C
-CommonLoadingScreen.HoldLoadingScreenAdditionalSecs=5.000000
+CommonLoadingScreen.HoldLoadingScreenAdditionalSecs=3.000000
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=False
+bMoviesAreSkippable=False
 
